[tool.poetry]
name = "nDES"
version = "0.1.0"
description = ""
authors = ["Łukasz Neumann <lukasz.neumann@pw.edu.pl>"]

[tool.poetry.dependencies]
python = "^3.7"
torch = "1.6"
torchvision = "^0.7.0"
pytorch-lightning = "^0.8.5"
pandas = "^1.1.0"
scikit-learn = "^0.23.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
